<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:id="@+id/action_coin_list"
        android:orderInCategory="100"
        android:title="@string/action_coin_list"
        app:showAsAction="never"/>
    <item
        android:id="@+id/albums"
        android:orderInCategory="100"
        android:title="@string/albums"
        app:showAsAction="never"/>
    <item
        android:id="@+id/exchange"
        android:orderInCategory="100"
        android:title="@string/exchange"
        app:showAsAction="never"/>
    <item
        android:id="@+id/dialogue"
        android:orderInCategory="100"
        android:title="@string/dialogue"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_exit"
        android:orderInCategory="100"
        android:title="@string/action_exit"
        app:showAsAction="never"/>
</menu>
