<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:id="@+id/add_coin"
        android:orderInCategory="100"
        android:title="@string/add_coin"
        app:showAsAction="never"/>
    <item
        android:id="@+id/remove_coin"
        android:orderInCategory="100"
        android:title="@string/remove_coin"
        app:showAsAction="never"/>
    <item
        android:id="@+id/delete_album"
        android:orderInCategory="100"
        android:title="@string/delete_album"
        app:showAsAction="never"/>
    <item
        android:id="@+id/comeback"
        android:orderInCategory="100"
        android:title="@string/comeback"
        app:showAsAction="never"/>
</menu>
